fix copy+paste error from fglrx-driver
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@3397 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -251,7 +251,7 @@ nvidia-graphics-drivers (302.17-3) unstable; urgency=low
   * nvidia-libopencl1: Provides/Conflicts/Replaces: libopencl1.
     (Closes: #679047)
   * xserver-xorg-video-nvidia.{config,postinst}: Present a debconf note about
-    needing manual Xorg configuration to enable the fglrx driver.
+    needing manual Xorg configuration to enable the nvidia driver.
   * xserver-xorg-video-nvidia.postrm: Present a debconf note if the driver was
     removed, but it is still enabled in xorg.conf(.d/).
 
