new upstream long lived branch release 304.51 (2012-09-24)
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@3405 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,23 @@
+nvidia-graphics-drivers (304.51-1) UNRELEASED; urgency=low
+
+  * New upstream long lived branch release 304.51 (2012-09-24).
+    - Added support for the following GPUs: GeForce GT 645M,
+      GeForce GTX 670MX, GeForce GTX 675MX, GeForce GTX 650 Ti.
+    - Added support for the new Quadro Sync board for Quadro Kepler GPUs.
+      See the "Configuring Frame Lock and Genlock" chapter in the README
+      for details.
+    - Fixed an X server crash on X.Org xserver 1.13 when it is compiled
+      without support for DRI2.
+    - Fixed a regression that broke color controls on older X servers.
+    - Fixed a bug that prevented panning from working correctly after a
+      modeswitch on some X servers with support for cursor constraining.
+    - Gamma ramp and colormap adjustments now apply correctly when screen
+      transformations such as rotation and keystone correction are in use.
+    * Closes: #688660.
+  * Update nv-readme.ids.
+
+ -- Andreas Beckmann <debian@abeckmann.de>  Mon, 24 Sep 2012 18:14:16 +0200
+
 nvidia-graphics-drivers (304.48-1) unstable; urgency=low
 
   * New upstream long lived branch release 304.48 (2012-09-11).
