fix caching for legacy drivers
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@3407 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -19,6 +19,7 @@ nvidia-graphics-drivers (304.51-1) UNRELEASED; urgency=low
     prevent apt from removing libgl1-nvidia-alternatives-ia32 (which would
     remove the diversions) while the old (pre-transitional)
     libgl1-nvidia-glx-ia32 is still installed.  (Closes: #688659)
+  * get-orig-source: Fix caching for legacy drivers.
 
  -- Andreas Beckmann <debian@abeckmann.de>  Mon, 24 Sep 2012 18:14:16 +0200
 
