apply libxvmc1 HACK for multiarch co-installability
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@3410 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -22,6 +22,10 @@ nvidia-graphics-drivers (304.51-1) UNRELEASED; urgency=low
   * get-orig-source: Fix caching for legacy drivers.
   * bug-control: report version info about revived
     libgl1-nvidia-legacy-96xx-glx-ia32.
+  * libgl1-nvidia-glx:i386: Apply crude HACK to downgrade libxvmc1 dependency
+    to Recommends. Fixes multiarch installation of libgl1-nvidia-glx:amd64
+    with libgl1-nvidia-glx:i386. (See: #676723, #685054, #686033, #688714)
+    A proper fix will be splitting libxvmcnvidia1 from libgl1-nvidia-glx.
 
  -- Andreas Beckmann <debian@abeckmann.de>  Mon, 24 Sep 2012 18:14:16 +0200
 
