--- a/debian/changelog
+++ b/debian/changelog
@@ -28,6 +28,8 @@ nvidia-graphics-drivers (304.51-1) UNRELEASED; urgency=low
     A proper fix will be splitting libxvmcnvidia1 from libgl1-nvidia-glx.
   * Upgrade nvidia-settings relationship from Suggests to Recommends and use a
     substvar for the name of the compatible nvidia-settings package.
+  * libgl1-nvidia-glx:i386: Add Breaks: ia32-libs (= 20120926) as the version
+    in squeeze-proosed-updates is now newer than the version in sid.
 
  -- Andreas Beckmann <debian@abeckmann.de>  Mon, 24 Sep 2012 18:14:16 +0200
 
