--- a/debian/changelog
+++ b/debian/changelog
@@ -29,7 +29,8 @@ nvidia-graphics-drivers (304.51-1) UNRELEASED; urgency=low
   * Upgrade nvidia-settings relationship from Suggests to Recommends and use a
     substvar for the name of the compatible nvidia-settings package.
   * libgl1-nvidia-glx:i386: Add Breaks: ia32-libs (= 20120926) as the version
-    in squeeze-proosed-updates is now newer than the version in sid.
+    in squeeze-proposed-updates is now newer than the version in sid.
+  * There is no need to exclude squeeze-backports from using xz compression.
 
  -- Andreas Beckmann <debian@abeckmann.de>  Mon, 24 Sep 2012 18:14:16 +0200
 
