--- a/debian/changelog
+++ b/debian/changelog
@@ -15,6 +15,11 @@ nvidia-graphics-drivers (304.51-1) UNRELEASED; urgency=low
       transformations such as rotation and keystone correction are in use.
     * Closes: #688660.
   * Update nv-readme.ids.
+
+ -- Andreas Beckmann <debian@abeckmann.de>  Mon, 24 Sep 2012 18:14:16 +0200
+
+nvidia-graphics-drivers (304.48-2) unstable; urgency=low
+
   * libgl1-nvidia-glx-ia32: readd Depends: libgl1-nvidia-alternatives-ia32 to
     prevent apt from removing libgl1-nvidia-alternatives-ia32 (which would
     remove the diversions) while the old (pre-transitional)
