ia32-libs has fixed its versioning
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@3426 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,6 @@
 nvidia-graphics-drivers (304.48-3) UNRELEASED; urgency=low
 
+  * libgl1-nvidia-glx:i386: Breaks: ia32-libs (<< 1:0), versioning was fixed.
   * Split libxvmcnvidia1 from libgl1-nvidia-glx.
     - Drops libxvmc1 dependency from libgl1-nvidia-glx, making the package
       multi-arch co-installable.  (Closes: #676723, #685054, #686033, #688714)
