--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ nvidia-graphics-drivers (304.51-1+exp1) UNRELEASED; urgency=low
 
   * Merge proposed changes for 304.48-3:
     - Split libxvmcnvidia1 from libgl1-nvidia-glx.
+  * nvidia-cuda-proxy: New package for nvidia-cuda-proxy-{control,server}.
 
  -- Andreas Beckmann <debian@abeckmann.de>  Mon, 08 Oct 2012 16:01:06 +0200
 
