--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,8 @@ nvidia-graphics-drivers (304.51-1+exp1) UNRELEASED; urgency=low
   * Merge proposed changes for 304.48-3:
     - Split libxvmcnvidia1 from libgl1-nvidia-glx.
   * nvidia-cuda-proxy: New package for nvidia-cuda-proxy-{control,server}.
+  * libgl1-nvidia-glx-i386:i386: New M-A: foreign helper package that can be
+    recommended by libgl1-nvidia-glx-ia32:amd64.  (See: #687506)
 
  -- Andreas Beckmann <debian@abeckmann.de>  Mon, 08 Oct 2012 16:01:06 +0200
 
