--- a/debian/changelog
+++ b/debian/changelog
@@ -28,6 +28,7 @@ nvidia-graphics-drivers (310.14-1) UNRELEASED; urgency=low
     (they will be supported by a legacy-304xx driver until end of 2017).
   * Add NEWS entry about models that were moved to legacy support.
   * Update nv-readme.ids.
+  * Refresh use-nv-kernel.o.ARCH.patch.
 
  -- Andreas Beckmann <debian@abeckmann.de>  Tue, 16 Oct 2012 17:45:45 +0200
 
