--- a/debian/changelog
+++ b/debian/changelog
@@ -31,6 +31,7 @@ nvidia-graphics-drivers (310.14-1) UNRELEASED; urgency=low
   * Refresh use-nv-kernel.o.ARCH.patch.
   * Drop fix-typos.patch, fixed upstream.
   * libXvMCNVIDIA.so.1 is gone, was only supported on GeForce 6/7 series.
+  * Update symbols control files.
 
  -- Andreas Beckmann <debian@abeckmann.de>  Tue, 16 Oct 2012 17:45:45 +0200
 
