new upstream long lived branch release 304.60 (2012-10-18)
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@3464 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,24 @@
-nvidia-graphics-drivers (304.48-3) UNRELEASED; urgency=low
+nvidia-graphics-drivers (304.60-1) UNRELEASED; urgency=low
 
+  * New upstream long lived branch release 304.60 (2012-10-18).
+    - Fixed a bug that caused the X server to crash if a display was put into
+      DPMS off mode and subsequently reenabled while screen transformations are
+      in use.
+    - Fixed a bug that caused the X Resize and Rotate extension to be enabled
+      when Xinerama is enabled.  These two X extensions are incompatible and
+      having them both enabled can confuse window managers such as KDE's kwin.
+      RandR is now correctly disabled when Xinerama is enabled.
+    - Fixed a bug causing OpenGL stereo applications to not work properly
+      when using passive stereo modes 5 through 9 on Quadro Fermi and newer
+      GPUs.
+    - Added support for the "Backlight" RandR output property for
+      configuring the brightness of some notebook internal panels.
+    - Fixed a bug that prevented the Ubuntu Unity launcher panel from
+      unhiding: https://bugs.launchpad.net/unity/+bug/1057000
+    - Fixed a bug that caused incorrect input transformation after resizing
+      an NVIDIA X screen with xserver ABI 12 (xorg-server 1.12) or newer.
+    - Fixed a bug that caused GLX to leak memory when Xinerama is
+      enabled.
   * Restrict watch file to releases from the 304.xx long lived branch.
   * libgl1-nvidia-glx:i386: Breaks: ia32-libs (<< 1:0), versioning was fixed.
   * Fix missing legacy substitution.
@@ -8,7 +27,7 @@ nvidia-graphics-drivers (304.48-3) UNRELEASED; urgency=low
     on libxvmc1 (which is not yet converted to multiarch, see #640499), making
     libgl1-nvidia-glx multiarch co-installable.
 
- -- Andreas Beckmann <debian@abeckmann.de>  Thu, 27 Sep 2012 09:38:46 +0200
+ -- Andreas Beckmann <debian@abeckmann.de>  Sat, 20 Oct 2012 13:03:16 +0200
 
 nvidia-graphics-drivers (304.51-1) experimental; urgency=low
 
