--- a/debian/changelog
+++ b/debian/changelog
@@ -26,6 +26,10 @@ nvidia-graphics-drivers (304.60-1) UNRELEASED; urgency=low
   * libgl1-nvidia-glx: Stop shipping libXvMCNVIDIA*.so.1 to avoid dependency
     on libxvmc1 (which is not yet converted to multiarch, see #640499), making
     libgl1-nvidia-glx multiarch co-installable.
+  * conftest.h:
+    - Implement checks for linux/efi.h and linux/nvmap.h (310.14).
+    - Implement new conftest.sh functions outer_flush_all, nvmap_support, and
+      efi_enabled (310.14).
 
  -- Andreas Beckmann <debian@abeckmann.de>  Sat, 20 Oct 2012 13:03:16 +0200
 
