don't build modules for all variants
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@3498 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+nvidia-graphics-drivers (304.60-2) UNRELEASED; urgency=low
+
+  * build-module-packages.sh: Build modules only for the variant (current or
+    legacy-abcxx) that shipped the script.
+
+ -- Andreas Beckmann <debian@abeckmann.de>  Sat, 03 Nov 2012 23:08:26 +0100
+
 nvidia-graphics-drivers (304.60-1) unstable; urgency=low
 
   * New upstream long lived branch release 304.60 (2012-10-18).
