implement new conftest.sh function set_memory_array_uc
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@3502 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -16,6 +16,7 @@ nvidia-graphics-drivers (304.64-1) UNRELEASED; urgency=low
     - Added support for the following GPUs: VGX K1, VGX K2, Tesla K20c,
       Tesla K20m.
   * Update nv-readme.ids.
+  * conftest.h: Implement new conftest.sh function set_memory_array_uc.
   * build-module-packages.sh: Build modules only for the variant (current or
     legacy-abcxx) that shipped the script.
 
