--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-nvidia-graphics-drivers (304.64-1) UNRELEASED; urgency=low
+nvidia-graphics-drivers (304.64-1) unstable; urgency=low
 
   * New upstream long lived branch release 304.64 (2012-11-06).
     - Fixed a regression in backlight control functionality on some
@@ -20,7 +20,7 @@ nvidia-graphics-drivers (304.64-1) UNRELEASED; urgency=low
   * build-module-packages.sh: Build modules only for the variant (current or
     legacy-abcxx) that shipped the script.
 
- -- Andreas Beckmann <debian@abeckmann.de>  Tue, 06 Nov 2012 15:07:03 +0100
+ -- Andreas Beckmann <debian@abeckmann.de>  Wed, 07 Nov 2012 10:14:11 +0100
 
 nvidia-graphics-drivers (304.60-1) unstable; urgency=low
 
