finalize changelog for nvidia-graphics-drivers (310.19-0+exp1), upload to experimental
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/310plus@3518 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-nvidia-graphics-drivers (310.19-1) UNRELEASED; urgency=low
+nvidia-graphics-drivers (310.19-0+exp1) experimental; urgency=low
 
   * New upstream release 310.19 (2012-11-16).
   * New upstream release 304 series.
@@ -7,7 +7,7 @@ nvidia-graphics-drivers (310.19-1) UNRELEASED; urgency=low
       displays. See the "X Config Options" appendix of the README for details.
   * Merge changes from 304.64-2.
 
- -- Andreas Beckmann <debian@abeckmann.de>  Fri, 23 Nov 2012 15:22:46 +0100
+ -- Andreas Beckmann <debian@abeckmann.de>  Fri, 23 Nov 2012 18:05:13 +0100
 
 nvidia-graphics-drivers (310.14-1+exp1) experimental; urgency=low
 
