nvidia-detect: fix detection of Debian 7.0 (wheezy)
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@3546 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-graphics-drivers (304.64-4) UNRELEASED; urgency=low
+
+  * nvidia-detect: Fix detection of Debian 7.0 (wheezy).  (Closes: #697282)
+
+ -- Andreas Beckmann <debian@abeckmann.de>  Tue, 08 Jan 2013 11:01:39 +0100
+
 nvidia-graphics-drivers (304.64-3) unstable; urgency=low
 
   * Add libxvmcnvidia1 package for the libXvMCNVIDIA*.so.1 library that was
