finalize changelog for nvidia-graphics-drivers (304.64-4)
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@3548 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-nvidia-graphics-drivers (304.64-4) UNRELEASED; urgency=low
+nvidia-graphics-drivers (304.64-4) unstable; urgency=low
 
   * nvidia-detect: Fix detection of Debian 7.0 (wheezy).  (Closes: #697282)
   * kernel-3.7.patch: New patch to fix compilation with Linux 3.7 (which
     replaced VM_RESERVED by VM_DONTEXPAND | VM_DONTDUMP).  (Closes: #697061)
 
- -- Andreas Beckmann <debian@abeckmann.de>  Tue, 08 Jan 2013 11:01:39 +0100
+ -- Andreas Beckmann <debian@abeckmann.de>  Tue, 08 Jan 2013 11:44:34 +0100
 
 nvidia-graphics-drivers (304.64-3) unstable; urgency=low
 
