kernel-3.7.patch is not needed for 310.xx
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/310@3560 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,7 @@ nvidia-graphics-drivers (310.19-1) UNRELEASED; urgency=low
       suppression of RandR events when adding or removing non-DisplayPort
       displays. See the "X Config Options" appendix of the README for details.
   * Merge changes from 304.64-4.
+  * Drop kernel-3.7.patch, fixed upstream.
 
  -- Andreas Beckmann <debian@abeckmann.de>  Fri, 23 Nov 2012 15:22:46 +0100
 
