fix kernel-version to cope with kernel 3.7 moving around version.h
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@3564 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+nvidia-graphics-drivers (304.64-5) UNRELEASED; urgency=low
+
+  * Fix debian/module/debian/kernel-version to cope with $KSRC/linux/version.h
+    being moved to $KSRC/include/generated/uapi/linux/version.h in Linux 3.7.
+    (Closes: #696570)
+
+ -- Andreas Beckmann <debian@abeckmann.de>  Thu, 10 Jan 2013 12:06:33 +0100
+
 nvidia-graphics-drivers (304.64-4) unstable; urgency=low
 
   * nvidia-detect: Fix detection of Debian 7.0 (wheezy).  (Closes: #697282)
