--- a/debian/changelog
+++ b/debian/changelog
@@ -28,6 +28,7 @@ nvidia-graphics-drivers (313.09-1) UNRELEASED; urgency=low
       graphics card with a TV connector has no TV connected.
   * Update symbols control files.
   * Update lintian overrides.
+  * libnvidia-encode1: New package for libnvidia-encode.so*.
 
  -- Andreas Beckmann <debian@abeckmann.de>  Thu, 10 Jan 2013 14:55:42 +0100
 
