--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,14 @@
-nvidia-graphics-drivers (313.09-1) UNRELEASED; urgency=low
+nvidia-graphics-drivers (313.18-1) UNRELEASED; urgency=low
 
-  * New upstream beta 313.09 (2012-12-12).
+  * New upstream release 313.18 (2013-01-16).
+    - Added support in NV-CONTROL and in nvidia-settings for changing the
+      Double Precision performance boost mode on supported GPUs.
+    - Fixed several OpenGL driver bugs related to stencil-only framebuffer
+      objects.
+  * New upstream beta 313.09 (2012-12-11).
+    - Updated the NVIDIA X driver to reprobe displays when VT-switching to
+      X, to allow reporting of hotplug events when displays are connected
+      or disconnected while VT-switched away from X.
     - Added unofficial GLX protocol support (i.e for GLX indirect rendering)
       for the following extension and core commands.
       GL_ARB_vertex_array_object
@@ -16,6 +24,29 @@ nvidia-graphics-drivers (313.09-1) UNRELEASED; urgency=low
     - Improved the performance of glDrawPixels() by up to 450% when the pixel
       data is of type GL_BYTE.
   * New upstream release 310 series.
+    - Fixed a bug when enabling framelock between displays connected to
+      the same GPU as other displays with different refresh rates, which
+      caused the latter to be incorrectly assigned to the framelock group.
+    - Updated the reporting of HDMI 3D framerates and pixel clocks to be
+      more consistent with how they are reported by HDMI 3D displays.
+    - Fixed a bug that sometimes prevented rotation controls in the nvidia-
+      settings control panel from working after changing resolutions.
+    - Fixed a bug that could cause applications using GL_NV_vdpau_interop
+      to crash during modeswitches.
+    - Fixed a regression that could cause OpenGL applications to crash
+      while compiling shaders.
+    - Added a kernel module parameter, "NVreg_EnablePCIeGen3", which can be
+      used to enable PCIe gen 3 when possible. Note that on many systems
+      where the NVIDIA driver does not allow PCIe gen 3 by default,
+      stability problems can be expected when this option is enabled: users
+      should do so at their own risk.
+    - Fixed a VDPAU bug that could cause the X server to hang when decoding
+      some corrupted video streams.
+    - Added support for the following GPUs: Quadro K600, Quadro K2000,
+      Quadro K2000D, Quadro K4000, GeForce GTX 680MX, Tesla K20Xm.
+    - Renamed VGX products to GRID products in the "Supported NVIDIA GPU
+      Products" list.
+    - Added support for X.org xserver ABI 14 (xorg-server 1.14).
     - Fixed libnvidia-encode.so library dependency by linking it with
       libnvcuvid.so.1 instead of libnvcuvid.so while creating it.
     - Improved performance of OpenGL framebuffer object binds with Xinerama
@@ -24,6 +55,12 @@ nvidia-graphics-drivers (313.09-1) UNRELEASED; urgency=low
     - Fix performance issues when using some versions of HyperMesh with Quadro
       GPUs.
   * New upstream release 304 series.
+    - Fixed a bug that could cause the X server to crash when performing
+      an RandR 1.0 rotation (e.g., `xrandr --orientation left`) after
+      unplugging the last connected monitor.
+    - Fixed font rendering performance and corruption problems on X servers with
+      backported support for the new glyph cache functionality added to Pixman
+      0.27.
     - Fixed a potential X server crash during initialization, when a 
       graphics card with a TV connector has no TV connected.
   * Update symbols control files.
