make nvidia-detect aware of the (legacy) 304 driver in wheezy
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/313@3592 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -66,6 +66,7 @@ nvidia-graphics-drivers (313.18-1) UNRELEASED; urgency=low
   * Update nv-readme.ids.
   * Update symbols control files.
   * Update lintian overrides.
+  * nvidia-detect: Add PCI ID list for the 304.64 driver in wheezy.
 
  -- Andreas Beckmann <debian@abeckmann.de>  Thu, 10 Jan 2013 14:55:42 +0100
 
