--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-nvidia-graphics-drivers (313.18-1) UNRELEASED; urgency=low
+nvidia-graphics-drivers (313.18-1) experimental; urgency=low
 
   * New upstream release 313.18 (2013-01-16).
     - Added support in NV-CONTROL and in nvidia-settings for changing the
@@ -68,7 +68,7 @@ nvidia-graphics-drivers (313.18-1) UNRELEASED; urgency=low
   * Update lintian overrides.
   * nvidia-detect: Add PCI ID list for the 304.64 driver in wheezy.
 
- -- Andreas Beckmann <debian@abeckmann.de>  Thu, 10 Jan 2013 14:55:42 +0100
+ -- Andreas Beckmann <debian@abeckmann.de>  Wed, 16 Jan 2013 21:07:03 +0100
 
 nvidia-graphics-drivers (310.19-1) experimental; urgency=low
 
