--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-graphics-drivers (313.18-2) UNRELEASED; urgency=low
+
+  * libnvidia-encode1: New package for libnvidia-encode.so*.
+
+ -- Andreas Beckmann <anbe@debian.org>  Fri, 25 Jan 2013 17:30:01 +0100
+
 nvidia-graphics-drivers (313.18-1) experimental; urgency=low
 
   * New upstream release 313.18 (2013-01-16).
