--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
-nvidia-graphics-drivers (313.18-2) UNRELEASED; urgency=low
+nvidia-graphics-drivers (313.18-2) experimental; urgency=low
 
+  * Update my email address and remove DMUA.
   * libnvidia-encode1: New package for libnvidia-encode.so*.
 
- -- Andreas Beckmann <anbe@debian.org>  Fri, 25 Jan 2013 17:30:01 +0100
+ -- Andreas Beckmann <anbe@debian.org>  Fri, 25 Jan 2013 17:41:07 +0100
 
 nvidia-graphics-drivers (313.18-1) experimental; urgency=low
 
